# Math-Heuristic

./: .gitignore  README.md  check_accuracy.py  check_json_counts.py  check_pass_at_k.py  heuristic_guide.md  install.sh  math-heuristics  pyproject.toml  render_problem.ipynb  request_uri.py  run_request_api.sh  run_request_uri.sh
config/: claude-sonnet-4.5.yaml  deepseek-v3.2.yaml  gemini-2.5-flash.yaml  local-llama-3.1-8b.yaml  nemotron-cascade-8b-sft.yaml  nemotron-cascade-8b-thinking.yaml  nemotron-cascade-8b.yaml  olmo-3-7b-rl-zero.yaml  olmo-3-7b-think-dpo.yaml  olmo-3-7b-think-rlvr.yaml  olmo-3-7b-think-sft.yaml  olmo-3-7b-think.yaml  olmo-3-7b.yaml  qwen3-1.7b-base.yaml  qwen3-235b-a22b-instruct-2507.yaml  qwen3-235b-a22b-thinking-2507.yaml  qwen3-30b-a3b-instruct-2507.yaml  qwen3-30b-a3b-thinking-2507.yaml  qwen3-8b-base.yaml  qwen3-8b-instruct.yaml  qwen3-8b-thinking.yaml
dataset/raw/: math_perturb_hard.jsonl  math_perturb_simple.jsonl
dataset/test/: math_perturb_hard.jsonl  math_perturb_original.jsonl  math_perturb_simple.jsonl
dataset/train/: math_perturb_hard.jsonl  math_perturb_original.jsonl  (+1 more)
evaluation/: answer_extraction.py  eval_script.py  eval_utils.py
output_variant/: claude-sonnet-4.5_math_perturb_hard_result.jsonl  claude-sonnet-4.5_math_perturb_original_result.jsonl
src/: check_accuracy.py  check_pass_at_k.py  evaluate.py  format_prompt.py  json_to_jsonl.py  match_original.py  postprocess_results.py  repair_broken_json.py  vllm_serve.py
system_prompt/: CLAUDE_SONNET_4.5  HEURISTIC_INST  HEURISTIC_INST_SIMPLE  NEMOTRON_CASCADE  OLMO_3
