[project]
name = "math-heuristic"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "math-verify>=0.9.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
    "transformers>=4.57.6",
    "vllm>=0.17.0",
]
